# compiler

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.md  SUMMARY.md  ast.cpp  ast.h  ast_nodes.cpp  ast_nodes.h  build.sh  clike-compiler  codegen.cpp  codegen.h  debug_parser  debug_parser.cpp  debug_parser2  debug_parser2.cpp  lex.l  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  parser.tab.h  parser.y  sample.cl  test.sh  test_compiler.sh  test_parser.cpp  test_parser_simple  test_parser_simple.cpp  test_simple  test_simple.cpp  test_tokens  test_tokens.cpp
examples/: comprehensive.cl  control_flow.c  factorial.c  factorial.clike  fibonacci.c  fibonacci.clike  float_ops.c  loops.clike  simple.c  simple.cl  simple.clike  test1.cl  test2.cl
include/: ast.h  ir_generator.h  lexer.h  parser.h
src/: AST.h  CodeGen.cpp  CodeGen.h  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  ir_generator.cpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp
tests/: arithmetic.cl  factorial.cl  functions.cl  hello_world.cl  loops.cl  variables.cl
